--- a/src/scss/Main.css
+++ b/src/scss/Main.css
@@ -15,4 +15,45 @@
       -ms-flex-align: center;
           align-items: center;
 }
+
+.sidebar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: fixed;
+  background-color: lightgrey;
+  width: 15vw;
+  height: 85vh;
+  right: 20px;
+}
+
+.sidebar .profile {
+  position: relative;
+  width: 95%;
+  height: 32%;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.sidebar .profile img {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.sidebar .profile .userName {
+  position: absolute;
+  z-index: 2;
+  bottom: 0px;
+  right: 10px;
+  font-weight: bold;
+  color: white;
+}
 /*# sourceMappingURL=Main.css.map */
