--- a/src/scss/Main.scss
+++ b/src/scss/Main.scss
@@ -6,3 +6,37 @@
     justify-content: center;
     align-items: center;
 }
+
+.sidebar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    background-color: lightgrey;
+    width: 15vw;
+    height: 85vh;
+    right: 20px;
+
+    .profile {
+        position: relative;
+        width: 95%;
+        height: 32%;
+        margin-top: 5px;
+        margin-bottom: 5px;
+
+        img {
+            position: relative;
+            width: 100%;
+            height: 100%;
+        }
+
+        .userName {
+            position: absolute;
+            z-index: 2;
+            bottom: 0px;
+            right: 10px;
+            font-weight: bold;
+            color: white;
+        }
+    }
+}
