--- a/src/scss/Main.css
+++ b/src/scss/Main.css
@@ -16,6 +16,30 @@
           align-items: center;
 }
 
+.chat {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: fixed;
+  background-color: lightgrey;
+  width: 15vw;
+  height: 85vh;
+  left: 20px;
+}
+
+.chat .comments {
+  position: relative;
+  width: 100%;
+  height: 80%;
+}
+
 .sidebar {
   display: -webkit-box;
   display: -ms-flexbox;
