--- a/src/scss/Main.scss
+++ b/src/scss/Main.scss
@@ -7,6 +7,24 @@
     align-items: center;
 }
 
+.chat {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    background-color: lightgrey;
+    width: 15vw;
+    height: 85vh;
+    left: 20px;
+
+    .comments {
+        position: relative;
+        width: 100%;
+        height: 80%;
+        
+    }
+}
+
 .sidebar {
     display: flex;
     flex-direction: column;
