Navbar and icon

--- a/src/scss/Landing.scss
+++ b/src/scss/Landing.scss
@@ -6,6 +6,7 @@
     align-items: center;
     justify-content: center;
     background-color: silver;
+    background-image: linear-gradient(to right, rgb(253, 255, 221), rgb(164,205,238));
 }
 
 .alert {
